testsuite/tests/linear/should_fail/LinearIf.stderr

LinearIf.hs:13:3: error:
    • Couldn't match type ‘'Many’ with ‘'One’
        arising from multiplicity of ‘b’
    • In an equation for ‘f’: f b x y = if b then x else y

LinearIf.hs:13:5: error:
    • Couldn't match type ‘'Many’ with ‘'One’
        arising from multiplicity of ‘x’
    • In an equation for ‘f’: f b x y = if b then x else y

LinearIf.hs:13:7: error:
    • Couldn't match type ‘'Many’ with ‘'One’
        arising from multiplicity of ‘y’
    • In an equation for ‘f’: f b x y = if b then x else y
